# Continuous-Integration

./: .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  ci  cmake_install.cmake  codecov.yml  main  main.c  new.txt
include/: ci.h  csv.h  list.h  students.h
src/: ci.c  csv.c  list.c  main.c  students.c
test/: a.out  main.c
tests/: main.c
